# AI-Engineer-Projects

./: .gitignore
Function calling - Project 1/: todo_service.py
Function calling - Project 1/client/: README.md  index.html
Function calling - Project 4/: agent_service.py  main.py
MCP with Playwright - Project 4/: README.md  client.py  debug_out.txt  debug_step3.txt  host.py  pyproject.toml  weather_Israel.py  weather_USA.py
Prompt Engineering - Project 2/nl2cmd/: .gitignore  README.md  challenging_results_v2.md  challenging_tests.md  evaluation_metrics.md  iteration_summary.md  pyproject.toml  sandbox_bonus.md  test_results_v1.md  test_results_v2.md  test_results_v4.md
Prompt Engineering - Project 2/nl2cmd/src/: agent.py  agent_v4.py  app.py  run_challenging_tests.py  run_evaluation.py  run_evaluation_v4.py  run_tests.py  run_with_sandbox.py  sandbox.py  test_sandbox_manual.py
RAG with LlamaIndex - Project 3/: README.md  app.py  config.py  requirements.txt  structured_data.json  workflow.py  workflow_diagram.html
RAG with LlamaIndex - Project 3/.claude/: rules.md
RAG with LlamaIndex - Project 3/.cursor/notes/: decisions.md  spec.md  tasks.md
RAG with LlamaIndex - Project 3/chroma_db/: chroma.sqlite3
